--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-
+title: Autism Projet
+logo: assets/images/ca979dac-76f5-42ab-a272-734ef7c8e91f.jpeg
+piture: assets/images/ca979dac-76f5-42ab-a272-734ef7c8e91f.jpeg
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
