--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Autism Projet
 logo: folder/images/mahine learning.jpg
 picture: folder/images/mahine learning.jpg
-remote_theme: pages-themes/merlot@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
